2008-01-27  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-awk.el, progmodes/cc-engine.el: Correct typos,
	enhance comments.

2008-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-compute-multi-hops): In case of su(do)?
	methods, the host name must be a local host.

2008-01-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Add TODO item about not defaulting to RCS.

	* server.el (server-process-filter): Check for non-nil before
	calling file-directory-p.

2008-01-27  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-hanging-braces-alist): new element for
	arglist-cont-nonempty.

	* progmodes/cc-cmds.el (c-brace-newlines): Determine the newlines
	for a brace with syntax arglist-cont-nonempty.

	* progmodes/cc-styles.el (c-style-alist): Add elements for
	arglist-cont-nonempty into 5 styles (gnu, ellemtel, linux, python,
	awk).

2008-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* button.el (define-button-type): Clarify type of NAME in docstring.

2008-01-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-buffer): New const.
	(server-log): New var.
	(server-log): Use them.
	(server-process-filter): (Try to) run the continuation in the same cwd
	as the client's.

2008-01-26  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-save-buffer-state):
	Bind buffer-file-name and buffer-file-truename to nil, to prevent
	primitives generating "buffer is read only" messages.

2008-01-20  Ulf Jasper  <ulf.jasper@web.de>

	* icalendar.el (icalendar-version): Increase to "0.17".
	(icalendar-import-format): Doc fix.  Allow function type.
	(icalendar--read-element): Doc fix.
	(icalendar--parse-summary-and-rest): Doc fix.  Handle function
	type icalendar-import-format.  Make regexps non-greedy.
	(icalendar--format-ical-event): Handle function type
	icalendar-import-format.
	(icalendar-import-format-sample): New function.

2008-01-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc.el (vc-exec-after): For mode-line-process highlighting, if